--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "duf2"
+name = "duf"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,6 +14,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio-util = { version = "0.7", features = ["codec", "io-util"] }
 futures = "0.3"
+base64 = "0.13.0"
 
 [dev-dependencies]
 tempfile = "3"
