--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "duf"
 version = "0.1.0"
 edition = "2021"
+authors = ["sigoden <sigoden@gmail.com>"]
+description = "Duf is a simple file server."
+license = "MIT OR Apache-2.0"
+homepage = "https://github.com/sigoden/duf"
+repository = "https://github.com/sigoden/duf"
+autotests = false
+categories = ["command-line-utilities", "web-programming::http-server"]
+keywords = ["static", "file", "server", "upload", "http", "cli"]
 
 [dependencies]
 clap = { version = "3", default-features = false, features = ["std", "cargo"] }
