--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,9 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio-util = { version = "0.7", features = ["codec", "io-util"] }
 futures = "0.3"
-base64 = "0.13.0"
+base64 = "0.13"
+log = "0.4"
+simple_logger = "2.1.0"
 
 [profile.release]
 lto = true
