--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ log = "0.4"
 simple_logger = "2.1.0"
 async_zip = "0.0.7"
 async-walkdir = "0.2.0"
+headers = "0.3.7"
 
 [profile.release]
 lto = true
