feat: add mime and cache headers to response

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ simple_logger = "2.1.0"
 async_zip = "0.0.7"
 async-walkdir = "0.2.0"
 headers = "0.3.7"
+mime_guess = "2.0.4"
 
 [profile.release]
 lto = true
