--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,21 +13,24 @@ keywords = ["static", "file", "server", "http", "cli"]
 
 [dependencies]
 clap = { version = "3", default-features = false, features = ["std", "cargo"] }
+chrono = "0.4"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"]}
+tokio-rustls = "0.23"
+tokio-stream = { version = "0.1", features = ["net"] }
+tokio-util = { version = "0.7",  features = ["codec", "io-util"] }
 hyper = { version = "0.14", features = ["http1", "server", "tcp", "stream"] }
 percent-encoding = "2.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio-util = { version = "0.7", features = ["codec", "io-util"] }
 futures = "0.3"
 base64 = "0.13"
-log = "0.4"
-simple_logger = "2.1.0"
 async_zip = "0.0.7"
 async-walkdir = "0.2.0"
 headers = "0.3.7"
 mime_guess = "2.0.4"
 get_if_addrs = "0.5.3"
+rustls = { version = "0.20", default-features = false, features = ["tls12"] }
+rustls-pemfile = "1"
 
 [profile.release]
 lto = true
