--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ md5 = "0.7.0"
 lazy_static = "1.4.0"
 uuid = { version = "1.1.1", features = ["v4", "fast-rng"] }
 urlencoding = "2.1.0"
+env_logger = { version = "0.9.0", default-features = false, features = ["humantime"] }
+log = "0.4.17"
 
 [profile.release]
 lto = true
