--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,46 +17,61 @@ jobs:
         - target: aarch64-unknown-linux-musl
           os: ubuntu-latest
           use-cross: true
+          cargo-flags: ""
         - target: aarch64-apple-darwin
           os: macos-latest
           use-cross: true
+          cargo-flags: ""
         - target: aarch64-pc-windows-msvc
           os: windows-latest
           use-cross: true
+          cargo-flags: ""
         - target: aarch64-linux-android
           os: ubuntu-latest
           use-cross: true
+          cargo-flags: ""
         - target: x86_64-apple-darwin
           os: macos-latest
+          cargo-flags: ""
         - target: x86_64-pc-windows-msvc
           os: windows-latest
+          cargo-flags: ""
         - target: x86_64-unknown-linux-musl
           os: ubuntu-latest
           use-cross: true
+          cargo-flags: ""
         - target: i686-unknown-linux-musl
           os: ubuntu-latest
           use-cross: true
+          cargo-flags: ""
         - target: i686-pc-windows-msvc
           os: windows-latest
           use-cross: true
+          cargo-flags: ""
         - target: armv7-unknown-linux-musleabihf
           os: ubuntu-latest
           use-cross: true
+          cargo-flags: ""
         - target: arm-unknown-linux-musleabihf
           os: ubuntu-latest
           use-cross: true
+          cargo-flags: ""
         - target: mips-unknown-linux-musl
           os: ubuntu-latest
           use-cross: true
+          cargo-flags: "--no-default-features"
         - target: mipsel-unknown-linux-musl
           os: ubuntu-latest
           use-cross: true
+          cargo-flags: "--no-default-features"
         - target: mips64-unknown-linux-gnuabi64
           os: ubuntu-latest
           use-cross: true
+          cargo-flags: "--no-default-features"
         - target: mips64el-unknown-linux-gnuabi64
           os: ubuntu-latest
           use-cross: true
+          cargo-flags: "--no-default-features"
     runs-on: ${{matrix.os}}
 
     steps:
@@ -98,7 +113,7 @@ jobs:
       with:
         use-cross: ${{ matrix.use-cross }}
         command: build
-        args: --locked --release --target=${{ matrix.target }}
+        args: --locked --release --target=${{ matrix.target }} ${{ matrix.cargo-flags }}
 
     - name: Build Archive
       shell: bash
