--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ async_zip = "0.0.7"
 async-walkdir = "0.2"
 headers = "0.3"
 mime_guess = "2.0"
-get_if_addrs = "0.5"
+if-addrs = "0.7"
 rustls = { version = "0.20", default-features = false, features = ["tls12"], optional = true }
 rustls-pemfile = { version = "1", optional = true }
 tokio-rustls = { version = "0.23", optional = true }
