--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 futures = "0.3"
 base64 = "0.13"
-async_zip = "0.0.7"
+async_zip = { git = "https://github.com/sigoden/rs-async-zip", branch = "patch01" }
 async-walkdir = "0.2"
 headers = "0.3"
 mime_guess = "2.0"
