--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ serde_json = "1"
 futures = "0.3"
 base64 = "0.13"
 async_zip = { version = "0.0.8", default-features = false, features = ["deflate"] }
-async-walkdir = "0.2"
 headers = "0.3"
 mime_guess = "2.0"
 if-addrs = "0.7"
@@ -37,6 +36,7 @@ xml-rs = "0.8"
 log = "0.4"
 socket2 = "0.4"
 async-stream = "0.3"
+walkdir = "2.3"
 
 [features]
 default = ["tls"]
