feat: guess plain text encoding then set content-type charset

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ form_urlencoded = "1.0"
 alphanumeric-sort = "1.4"
 content_inspector = "0.2"
 anyhow = "1.0"
+chardetng = "0.1"
 
 [features]
 default = ["tls"]
