fix: hidden don't works on some files
--hidden '*.abc-cba' matches xyz.abc-cba but do not matches 123.xyz.abc-cba

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ alphanumeric-sort = "1.4"
 content_inspector = "0.2"
 anyhow = "1.0"
 chardetng = "0.1"
+glob = "0.3.1"
 
 [features]
 default = ["tls"]
