--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -94,6 +94,8 @@ jobs:
       uses: dtolnay/rust-toolchain@stable
       with:
         targets: ${{ matrix.target }}
+        #  Since rust 1.72, mips platforms are tier 3
+        toolchain: 1.71
 
     - name: Install cross
       if: matrix.use-cross
