--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ headers = "0.4"
 mime_guess = "2.0"
 if-addrs = "0.12"
 rustls-pemfile = { version = "2.0", optional = true }
-tokio-rustls = { version = "0.26", optional = true }
+tokio-rustls = { version = "0.25", optional = true, default-features = false, features = ["ring", "tls12"]}
 md5 = "0.7"
 lazy_static = "1.4"
 uuid = { version = "1.7", features = ["v4", "fast-rng"] }
@@ -59,14 +59,14 @@ tls = ["rustls-pemfile", "tokio-rustls"]
 
 [dev-dependencies]
 assert_cmd = "2"
-reqwest = { version = "0.11", features = ["blocking", "multipart", "rustls-tls"], default-features = false }
+reqwest = { version = "0.12", features = ["blocking", "multipart", "rustls-tls"], default-features = false }
 assert_fs = "1"
 port_check = "0.2"
 rstest = "0.18"
 regex = "1"
 url = "2"
-diqwest = { version = "2.0", features = ["blocking"], default-features = false }
 predicates = "3"
+digest_auth = "0.3.1"
 
 [profile.release]
 opt-level = 3
