--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ lazy_static = "1.4"
 uuid = { version = "1.7", features = ["v4", "fast-rng"] }
 urlencoding = "2.1"
 xml-rs = "0.8"
-log = "0.4"
+log = { version = "0.4", features = ["std"] }
 socket2 = "0.5"
 async-stream = "0.3"
 walkdir = "2.3"
