feat: support authentication via token (#522)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,8 @@ http-body-util = "0.1"
 bytes = "1.5"
 pin-project-lite = "0.2"
 sha2 = "0.10.8"
+rand = "0.9.1"
+hex = "0.4.3"
 
 [features]
 default = ["tls"]
