Change CI workflow from Debian to Ubuntu

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         os:
         - windows-latest
-        - debian-latest
+        - ubuntu-latest
 
     runs-on: ${{matrix.os}}
 
